--- a/web/themes/custom/scaled/templates/layout/page.html.twig
+++ b/web/themes/custom/scaled/templates/layout/page.html.twig
@@ -47,8 +47,12 @@
   <header role="banner">
     {{ page.header }}
   </header>
-
-  {{ page.primary_menu }}
+  <div class="menu main">
+    <div class="container">
+      {{ page.primary_menu }}
+    </div>
+  </div>
+  
   {{ page.secondary_menu }}
 
   {{ page.breadcrumb }}
@@ -57,11 +61,27 @@
 
   {{ page.help }}
 
+   <div id="page-title">
+    <div class="container">
+      <h1>{{ page.page_title }}</h1>
+    </div>
+  </div>
+
+  {% if page.content_above %}
+      <div id="content_above">
+        <div class="container">
+          {{ page.content_above }}
+         </div>
+      </div>
+  {% endif %}
+
   <main role="main">
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
 
     <div class="layout-content">
-      {{ page.content }}
+      <div class="container">
+        {{ page.content }}
+      </div>
     </div>{# /.layout-content #}
 
     {% if page.sidebar_first %}
@@ -76,11 +96,28 @@
       </aside>
     {% endif %}
 
+    {% if page.paragraphs %}
+      {{ page.paragraphs }}
+    {% endif %}
+
   </main>
 
-  {% if page.footer %}
+  {% if page.footer_top %}
     <footer role="contentinfo">
-      {{ page.footer }}
+      <div class="container">
+        {{ page.footer_top }}
+        <?php echo date ("Y") ?>
+      </div>
+    </footer>
+  {% endif %}
+
+    {% if page.footer_bottom %}
+    <footer role="contentinfo">
+       <div class="container">
+        {{ page.footer_bottom }}
+      </div>
+    <div>
+    </div>
     </footer>
   {% endif %}
 
